<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Result</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="startrec">Start recording</string>
    <string name="endrec">End recording</string>
    <string name="sendphoto">Get current stats</string>

    <string name="hello_first_fragment"></string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>